--- a/index.html
+++ b/index.html
@@ -337,8 +337,8 @@
 			<section class="left white wrapper">
 				<div class="container">
 					<div class="dummy">
-						<h1 class="uppercase">Your Name</h1>
-						<h6 class="uppercase">Your job description</h6>
+						<h1 class="uppercase">Haider Altaf</h1>
+						<h6 class="uppercase">Reseach Scholar at IIT Madras</h6>
 					</div>
 				</div>
 			</section>
@@ -356,7 +356,7 @@
 		<section class="content" id="portfolio">
 		
 <!----------------------------------------------------ABOUT-ME START--------------------------------------------------------------------------------------->
-			<h1 class="heading" id="about" name="about">About me</h1>
+			<h1 class="heading" id="about" name="about">M.S in Biomedical Engineering</h1>
 			<p>
 				Interested in "XYZ" and "PQR". Experienced in alpha, beta, gamma. I work at X as Y. Before joining X, I was pursuing Z degree at ABC University</a> under the guidance of Dr. Random Advisor. I have mostly worked in the areas of blah, blah, blah. Before joining Z degree, I worked at this useless tech giant company as a Systems Engineer for over a year. Apart from blah blah, I love working on X kind of problems. I also love doing _ in my free time.
 			</p>
@@ -368,14 +368,14 @@
 			<section class="grid-collection">
 				
 				<div class="item">
-					<div class="project-title">Degree X</div>
-					<div class="paper-detail"><b>School/College:</b> ABC college of engineering</div>
-					<div class="paper-detail"><b>CGPA:</b> 8.0</div>
-					<div class="paper-detail"><b>Duration:</b> 2011-2013</div>
+					<div class="project-title">M.S in Biomedical Engineering</div>
+					<div class="paper-detail"><b>School/College:</b> IIT Madras</div>
+					<div class="paper-detail"><b>CGPA:</b> 8.11/10</div>
+					<div class="paper-detail"><b>Duration:</b> 2022-Present</div>
 				</div>
 				
 				<div class="item">
-					<div class="project-title">Degree X</div>
+					<div class="project-title">B-Tech in Electrical Engineering</div>
 					<div class="paper-detail"><b>School/College:</b> ABC college of engineering</div>
 					<div class="paper-detail"><b>CGPA:</b> 8.0</div>
 					<div class="paper-detail"><b>Duration:</b> 2011-2013</div>
