--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 
 	<body>
 		<!--TODO: change the logo initial from TT to your initials-->
-		<a href="./index.html" class="logo" title="Home"><span class="logo-initial">MJ</span></a>
+		<a href="./index.html" class="logo" title="Home"><span class="logo-initial">HA</span></a>
 		<div class="special-menu">
 			<a href="#top" class="scroll-links special-link">Top</a>
 		</div>
@@ -345,7 +345,7 @@
 			<section class="left black wrapper">
 				<div class="container">
 					<div class="dummy">
-						<img class="img-circle" src="images/me.png">
+						<img class="img-circle" src="images/profile_pic.png">
 						<div><a href="#portfolio" class="button white scroll-links" title="Academics & work experiences">Explore My Work</a></div>
 					</div>
 				</div>
