--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 			<section class="left black wrapper">
 				<div class="container">
 					<div class="dummy">
-						<img class="img-circle" src="images/profile_pic.jpg">
+						<img class="img-circle" src="images/pic2.jpg">
 						<div><a href="#portfolio" class="button white scroll-links" title="Academics & work experiences">Explore My Work</a></div>
 					</div>
 				</div>
