--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="left black wrapper">
+			<section class="left grey wrapper">
 				<div class="container">
 					<div class="dummy">
 						<img class="img-circle" src="images/pic3.jpg">
