--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 		</div>
 
 		<section class="full-page" id="top">
-			<section class="left white wrapper">
+			<section class="left black wrapper">
 				<div class="container">
 					<div class="dummy">
 						<h1 class="uppercase">Haider Altaf</h1>
