--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 		</div>
 
 		<section class="full-page" id="top">
-			<section class="left black wrapper">
+			<section class="left white wrapper">
 				<div class="container">
 					<div class="dummy">
 						<h1 class="uppercase">Haider Altaf</h1>
@@ -342,7 +342,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="left green wrapper">
+			<section class="left black wrapper">
 				<div class="container">
 					<div class="dummy">
 						<img class="img-circle" src="images/pic3.jpg">
