--- a/index.html
+++ b/index.html
@@ -356,9 +356,9 @@
 		<section class="content" id="portfolio">
 		
 <!----------------------------------------------------ABOUT-ME START--------------------------------------------------------------------------------------->
-			<h1 class="heading" id="about" name="about">M.S in Biomedical Engineering</h1>
+			<h1 class="heading" id="about" name="about">MS in Biomedical Engineering</h1>
 			<p>
-				Interested in "XYZ" and "PQR". Experienced in alpha, beta, gamma. I work at X as Y. Before joining X, I was pursuing Z degree at ABC University</a> under the guidance of Dr. Random Advisor. I have mostly worked in the areas of blah, blah, blah. Before joining Z degree, I worked at this useless tech giant company as a Systems Engineer for over a year. Apart from blah blah, I love working on X kind of problems. I also love doing _ in my free time.
+				Driven by a keen interest in digital signal processing and cognitive engineering, with a focus on healthcare applications. Experienced in analyzing physiological signals such as MEG/EEG, eye tracking, and voice data. Prior to pursuing my MS at IIT Madras, I completed a B-Tech in Electrical Engineering from Aligarh Muslim University. Outside of work, I enjoy traveling, running, cycling, and maintaining a healthy lifestyle.
 			</p>
 <!----------------------------------------------------ABOUT-ME END--------------------------------------------------------------------------------------->
 
