--- a/index.html
+++ b/index.html
@@ -510,9 +510,9 @@
 			<h1 class="heading" id="contact" name="contact">Contact</h1>
 			<p class="contacts">
 				<div>
-					<a href="itsaltafhaider@gmail.com">Email me </a>
-					<a href="githuburl" target="_blank"> Github </a>
-					<a href="www.linkedin.com/in/haider-altaf-72b86910a" target="_blank">LinkedIn</a>
+					<a href="itsaltafhaider@gmail.com">Email me</a>
+					<a href="githuburl" target="_blank">Github</a>
+					<a href="https://www.linkedin.com/in/haider-altaf-72b86910a" target="_blank">LinkedIn</a>
 				</div>
 			</p>
 		</section>
