--- a/index.html
+++ b/index.html
@@ -509,9 +509,9 @@
 
 			<h1 class="heading" id="contact" name="contact">Contact</h1>
 			<p class="contacts">
-				<div>
-					<a href="itsaltafhaider@gmail.com">Email me</a>
-					<a href="githuburl" target="_blank">Github</a>
+				<div class="link-box">
+					<a href="mailto:itsaltafhaider@gmail.com">Email me</a>
+					<a href="https://github.com/HaiderAltaf" target="_blank">Github</a>
 					<a href="https://www.linkedin.com/in/haider-altaf-72b86910a" target="_blank">LinkedIn</a>
 				</div>
 			</p>
