--- a/index.html
+++ b/index.html
@@ -509,6 +509,14 @@
 
 			<h1 class="heading" id="contact" name="contact">Contact</h1>
 			<p class="contacts">
+
+				<div style="border: 2px solid #0078d4; border-radius: 10px; padding: 15px; background-color: #f4f4f4; display: inline-block;">
+					<a href="mailto:itsaltafhaider@gmail.com" style="margin: 10px; text-decoration: none; color: #0078d4; font-weight: bold;">Email me</a>
+					<a href="https://github.com/githuburl" target="_blank" style="margin: 10px; text-decoration: none; color: #0078d4; font-weight: bold;">Github</a>
+					<a href="https://www.linkedin.com/in/haider-altaf-72b86910a" target="_blank" style="margin: 10px; text-decoration: none; color: #0078d4; font-weight: bold;">LinkedIn</a>
+				</div>
+
+			
 				<div class="link-box">
 					<a href="mailto:itsaltafhaider@gmail.com">Email me</a>
 					<a href="https://github.com/HaiderAltaf" target="_blank">Github</a>
