--- a/index.html
+++ b/index.html
@@ -509,10 +509,22 @@
 
 			<h1 class="heading" id="contact" name="contact">Contact</h1>
 			<p class="contacts">
+				<div style="display: flex; gap: 15px;">
+					<div style="border: 2px solid #0078d4; border-radius: 10px; padding: 10px; background-color: #f4f4f4; text-align: center;">
+						<a href="mailto:itsaltafhaider@gmail.com" style="text-decoration: none; color: #0078d4; font-weight: bold;">Email me</a>
+					</div>
+					<div style="border: 2px solid #0078d4; border-radius: 10px; padding: 10px; background-color: #f4f4f4; text-align: center;">
+						<a href="https://github.com/githuburl" target="_blank" style="text-decoration: none; color: #0078d4; font-weight: bold;">GitHub</a>
+					</div>
+					<div style="border: 2px solid #0078d4; border-radius: 10px; padding: 10px; background-color: #f4f4f4; text-align: center;">
+						<a href="https://www.linkedin.com/in/haider-altaf-72b86910a" target="_blank" style="text-decoration: none; color: #0078d4; font-weight: bold;">LinkedIn</a>
+					</div>
+				</div>
 
-				<div style="border: 2px solid #0078d4; border-radius: 10px; padding: 15px; background-color: #f4f4f4; display: inline-block;">
+
+				<!--<div style="border: 2px solid #0078d4; border-radius: 10px; padding: 15px; background-color: #f4f4f4; display: inline-block;">
 					<a href="mailto:itsaltafhaider@gmail.com" style="margin: 10px; text-decoration: none; color: #0078d4; font-weight: bold;">Email me</a>
-					<a href="https://github.com/githuburl" target="_blank" style="margin: 10px; text-decoration: none; color: #0078d4; font-weight: bold;">Github</a>
+					<a href="https://github.com/HaiderAltaf" target="_blank" style="margin: 10px; text-decoration: none; color: #0078d4; font-weight: bold;">Github</a>
 					<a href="https://www.linkedin.com/in/haider-altaf-72b86910a" target="_blank" style="margin: 10px; text-decoration: none; color: #0078d4; font-weight: bold;">LinkedIn</a>
 				</div>
 
@@ -521,7 +533,7 @@
 					<a href="mailto:itsaltafhaider@gmail.com">Email me</a>
 					<a href="https://github.com/HaiderAltaf" target="_blank">Github</a>
 					<a href="https://www.linkedin.com/in/haider-altaf-72b86910a" target="_blank">LinkedIn</a>
-				</div>
+				</div>---->
 			</p>
 		</section>
 	</body>
