--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 				text-align: center;
 			}
 			.logo:hover{
-				background: #444;
+				background: #87CEEB;
 			}
 			.logo-initial{
 				position: relative;
@@ -131,7 +131,7 @@
 				width: 100%;
 				height: 100%;
 				z-index: 100;
-				background-color: #FFF;
+				background-color: #FDF5E6;
 				position: relative;
 			}
 
