--- a/index.html
+++ b/index.html
@@ -402,6 +402,15 @@
 					<div><code class="id_tags">Human Cognition</code> <code class="id_tags">Photogrammetry</code> <code class="id_tags">Ray Casting</code> <code class="id_tags">Python</code> <code class="id_tags">MATLAB</code></div>
 					
 					<div class="project-description"> Eye tracking is used to track the eye movements of human to understand the cognition of the human as per eye-mind hypothesis</div>
+					<section class="left black wrapper">
+						<div class="container">
+							<div class="dummy">
+								<img class="img-circle" src="images/pic3.jpg">
+								<div><a href="#portfolio" class="button white scroll-links" title="Academics & work experiences">Explore My Work</a></div>
+							</div>
+						</div>
+					</section>
+					<div style="clear: both;"></div>
 					<div class="project-links">
 						<a href="https://scholar.google.com/citations?user=Gs_EugkAAAAJ&hl=en" target="_blank">Paper</a>; 
 					</div>
