--- a/index.html
+++ b/index.html
@@ -316,6 +316,18 @@
 					height: auto;
 				}
 			}
+			.project-image {
+				max-width: 100%; /* Ensures the image is responsive */
+				height: auto; /* Maintains aspect ratio */
+				border: 2px solid #444; /* Optional border styling */
+				border-radius: 10px; /* Optional rounded corners */
+				box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Optional shadow */
+			}
+			.image-container {
+				text-align: center; /* Center the image */
+				margin: 20px 0; /* Add some space around the image */
+			}
+  
 		</style>
 	</head>
 
@@ -402,7 +414,7 @@
 					<div><code class="id_tags">Human Cognition</code> <code class="id_tags">Photogrammetry</code> <code class="id_tags">Ray Casting</code> <code class="id_tags">Python</code> <code class="id_tags">MATLAB</code></div>
 					
 					<div class="project-description"> Eye tracking is used to track the eye movements of human to understand the cognition of the human as per eye-mind hypothesis</div>
-					<section class="left black wrapper">
+					<!----<section class="left black wrapper">
 						<div class="container">
 							<div class="dummy">
 								<img class="img-circle" src="images/pic3.jpg">
@@ -410,7 +422,7 @@
 							</div>
 						</div>
 					</section>
-					<div style="clear: both;"></div>
+					<div style="clear: both;"></div>--->
 					<div class="project-links">
 						<a href="https://scholar.google.com/citations?user=Gs_EugkAAAAJ&hl=en" target="_blank">Paper</a>; 
 					</div>
