--- a/index.html
+++ b/index.html
@@ -414,6 +414,9 @@
 					<div><code class="id_tags">Human Cognition</code> <code class="id_tags">Photogrammetry</code> <code class="id_tags">Ray Casting</code> <code class="id_tags">Python</code> <code class="id_tags">MATLAB</code></div>
 					
 					<div class="project-description"> Eye tracking is used to track the eye movements of human to understand the cognition of the human as per eye-mind hypothesis</div>
+					<div class="image-container">
+						<img src="images/pic4.jpg" alt="Project Image" class="project-image">					
+					</div>
 					<!----<section class="left black wrapper">
 						<div class="container">
 							<div class="dummy">
