--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 				}
 			}
 			.project-image {
-				max-width: 100%; /* Ensures the image is responsive */
+				max-width: 50%; /* Ensures the image is responsive */
 				height: auto; /* Maintains aspect ratio */
 				border: 2px solid #444; /* Optional border styling */
 				border-radius: 10px; /* Optional rounded corners */
@@ -415,7 +415,7 @@
 					
 					<div class="project-description"> Eye tracking is used to track the eye movements of human to understand the cognition of the human as per eye-mind hypothesis</div>
 					<div class="image-container">
-						<img src="images/pic4.jpg" alt="Project Image" class="project-image">					
+						<img src="images/meth_pic.jpg" alt="Project Image" class="project-image">					
 					</div>
 					<!----<section class="left black wrapper">
 						<div class="container">
