--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 					
 					<div class="project-description"> Eye tracking is used to track the eye movements of human to understand the cognition of the human as per eye-mind hypothesis</div>
 					<div class="image-container">
-						<img src="images/meth_pic.jpg" alt="Project Image" class="project-image">					
+						<img src="images/meth_pic.png" alt="Project Image" class="project-image">					
 					</div>
 					<!----<section class="left black wrapper">
 						<div class="container">
