--- a/index.html
+++ b/index.html
@@ -317,9 +317,9 @@
 				}
 			}
 			.project-image {
-				max-width: 50%; /* Ensures the image is responsive */
+				max-width: 30%; /* Ensures the image is responsive */
 				height: auto; /* Maintains aspect ratio */
-				border: 2px solid #444; /* Optional border styling */
+				border: 0px; /* Optional border styling */
 				border-radius: 0px; /* Optional rounded corners */
 				box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Optional shadow */
 			}
@@ -413,7 +413,9 @@
 					<div class="project-title">An Innovative Eye tracking Technique to track eye on Large Screen DIsplays</div>
 					<div><code class="id_tags">Human Cognition</code> <code class="id_tags">Photogrammetry</code> <code class="id_tags">Ray Casting</code> <code class="id_tags">Python</code> <code class="id_tags">MATLAB</code></div>
 					
-					<div class="project-description"> Eye tracking is used to track the eye movements of human to understand the cognition of the human as per eye-mind hypothesis</div>
+					<div class="project-description">  Eye tracking is used to track the eye movements of human to understand the cognition of the human as per eye-mind hypothesis</div>
+					<div class="project-description">  We propose a novel methodology to analyze operators' cognitive behavior in collaborative control rooms by visualizing their gaze patterns and obtaining eye-tracking metrics. Traditional eye trackers are designed to capture gaze data on calibrated displays within a limited range. However, they are often inadequate for capturing gaze data on large overview displays, mainly due to the size of these screens and the limitations of single-eye tracking systems. To address this limitation, our approach extends gaze tracking to large overview displays by leveraging the gaze vector, a standard output of eye-tracking systems</div>
+					<div class="project-description">  The below figure illustrate the innovative technique where in the 3D model of the experimental setup gaze data is casted to find the 3D gaze points</div>
 					<div class="image-container">
 						<img src="images/meth_pic.png" alt="Project Image" class="project-image">					
 					</div>
