--- a/index.html
+++ b/index.html
@@ -444,48 +444,31 @@
 	        
 			<!--Paper 1: START-->
 			<div class="item">
-	        	<div class="paper-detail"><i>[Publlished] </i><span class="authors">Author1 Name, Author2 Name, Author3 Name, </span><span class="paper-title"><b>Complete Name of Paper 1,</b> </span><span class="workshop-details"> to <b>Conference 1 Acronym</b> (Conference 1 Full Name)</span></div>
+	        	<div class="paper-detail"><i>[Publlished] </i><span class="authors">Altaf, H., Maiti, J., Srinivasan, B., & Srinivasan, R. (2024). Understanding Cognitive Behavior in Collaborative Control Rooms through Eye Tracking. In Computer Aided Chemical Engineering (Vol. 53, pp. 3079-3084). Elsevier. </span></div>
 	        	<div class="link">
-	        		<a href="http://ieeexplore.ieee.org/document/7975281/" target="_blank">IEEE Explore Link</a>;
+	        		<a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=Gs_EugkAAAAJ&citation_for_view=Gs_EugkAAAAJ:2osOgNQ5qMEC" target="_blank">Paper Link</a>;
 	        	</div>
 	        </div>
 			<!--Paper 1: END-->
 			
 			<!--Paper 2: START-->
 			<div class="item">
-	        	<div class="paper-detail"><i>[Submitted] </i><span class="authors">Author1 Name, Author2 Name, Author3 Name, </span><span class="paper-title"><b>Complete Name of Paper 1,</b> </span><span class="workshop-details"> to <b>Conference 2 Acronym</b> (Conference 2 Full Name)</span></div>
+	        	<div class="paper-detail"><i>[Publlished] </i><span class="authors">Altaf, H., Srinivasan, B., & Srinivasan, R. (2024, October). Assessing Team Performance in Control Rooms: Integrating Eye Tracking with Multimodal Data Analysis for Insights. In 2024 AIChE Annual Meeting. AIChE. </span></div>
 	        	<div class="link">
-	        		<a href="http://ieeexplore.ieee.org/document/7975281/" target="_blank">IEEE Explore Link</a>;
+	        		<a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=Gs_EugkAAAAJ&citation_for_view=Gs_EugkAAAAJ:qjMakFHDy7sC" target="_blank">Paper Link</a>;
 	        	</div>
 	        </div>
 			<!--Paper 2: END-->
 			
-			<!--Paper 3: START-->
-	        <div class="item">
-	        	<div class="paper-detail"><i>[Submitted] </i><span class="authors">Author1 Name, Author2 Name, Author3 Name, </span><span class="paper-title"><b>Complete Name of Paper 1,</b> </span><span class="workshop-details"> to <b>Conference 3 Acronym</b> (Conference 3 Full Name)</span></div>
-	        	<div class="link">
-	        		<a href="http://ieeexplore.ieee.org/document/7975281/" target="_blank">IEEE Explore Link</a>;
-	        	</div>
-	        </div>
-			<!--Paper 3: END-->
-			
-			<!--Paper 4: START-->
-			<div class="item">
-	        	<div class="paper-detail"><i>[Publlished] </i><span class="authors">Author1 Name, Author2 Name, Author3 Name, </span><span class="paper-title"><b>Complete Name of Paper 1,</b> </span><span class="workshop-details"> to <b>Conference 4 Acronym</b> (Conference 4 Full Name)</span></div>
-	        	<div class="link">
-	        		<a href="http://ieeexplore.ieee.org/document/7975281/" target="_blank">IEEE Explore Link</a>;
-	        	</div>
-	        </div>
-			<!--Paper 4: END-->
 
 <!----------------------------------------------------PUBLICATION END--------------------------------------------------------------------------------------->	
 
 <!----------------------------------------------------SKILLS START---------------------------------------------------------------------------------------->				
 			<h1 class="heading" id="skills" name="skills">Skills</h1>
 			<div class="item">
-					<div class="paper-detail"><b>Category 1:</b> alpha, beta, gamma</div>
-					<div class="paper-detail"><b>Category 2:</b> alpha, beta, gamma</div>
-					<div class="paper-detail"><b>Category 3:</b> alpha, beta, gamma</div>
+					<div class="paper-detail"><b>Programming Languages:</b> Python, MATLAB, Basic C</div>
+					<div class="paper-detail"><b>Area Of Interest:</b> Digital signal Processing, Computer Vision, DL/ML, Human-computer Interaction, VR/3D modeling</div>
+					<div class="paper-detail"><b>Toolkits & software:</b> Pytorch, TensorFlow, Scikit-Learn, PyVista, NumPy, Pandas, Blender, Autodesk’s Recap pro, Unreal Engine</div>
 				</div>
 
 <!----------------------------------------------------SKILLS END---------------------------------------------------------------------------------------->	
