--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
 			<h1 class="heading" id="skills" name="skills">Skills</h1>
 			<div class="item">
 					<div class="paper-detail"><b>Programming Languages:</b> Python, MATLAB, Basic C</div>
-					<div class="paper-detail"><b>Area Of Interest:</b>      Digital signal Processing, Computer Vision, DL/ML, Human-computer Interaction, VR/3D modeling</div>
+					<div class="paper-detail"><b style="margin-right: 20px;">Area Of Interest:</b>Digital signal Processing, Computer Vision, DL/ML, Human-computer Interaction, VR/3D modeling</div>
 					<div class="paper-detail"><b>Toolkits & software:</b>   Pytorch, TensorFlow, Scikit-Learn, PyVista, NumPy, Pandas, Blender, Autodesk’s Recap pro, Unreal Engine</div>
 				</div>
 
