--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 				}
 			}
 			.project-image {
-				max-width: 30%; /* Ensures the image is responsive */
+				max-width: 60%; /* Ensures the image is responsive */
 				height: auto; /* Maintains aspect ratio */
 				border: 0px; /* Optional border styling */
 				border-radius: 0px; /* Optional rounded corners */
@@ -423,7 +423,7 @@
 					<div class="project-title">An Innovative Eye tracking Technique to track eye on Large Screen Displays</div>
 					<div><code class="id_tags">Human Cognition</code> <code class="id_tags">Photogrammetry</code> <code class="id_tags">Ray Casting</code> <code class="id_tags">Python</code> <code class="id_tags">MATLAB</code></div>
 					
-					<div class="project-description">  Eye tracking is used to track the eye movements of human to understand the cognition of the human as per eye-mind hypothesis</div>
+					<div class="project-description">  Eye tracking is a technology used to monitor and analyze where and how a person moves their eyes. It helps researchers understand what a person is focusing on and thinking about, based on the eye-mind hypothesis, which suggests a connection between eye movements and cognitive processes like attention, perception, and decision-making.</div>
 					<div class="project-description">  We propose a novel methodology to analyze operators' cognitive behavior in collaborative control rooms by visualizing their gaze patterns and obtaining eye-tracking metrics. Traditional eye trackers are designed to capture gaze data on calibrated displays within a limited range. However, they are often inadequate for capturing gaze data on large overview displays, mainly due to the size of these screens and the limitations of single-eye tracking systems. To address this limitation, our approach extends gaze tracking to large overview displays by leveraging the gaze vector, a standard output of eye-tracking systems</div>
 					<div class="project-description">  This work constitutes a significant portion of my MS thesis. However, detailed discussions are not possible at this stage as it is currently undergoing the patent filing process.</div>
 					
