--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
 					<div><code class="id_tags">Human Cognition</code> <code class="id_tags">Photogrammetry</code> <code class="id_tags">Ray Casting</code> <code class="id_tags">Python</code> <code class="id_tags">MATLAB</code></div>
 					<div class="project-description">  Eye tracking is used to track the eye movements of human to understand the cognition of the human as per eye-mind hypothesis</div>
 					<div class="image-container">
-						<img src="images/Aiche24.jpg" alt="Project Image" class="project-image">					
+						<img src="images/Aiche24.jpg" alt="Project Image" class="project-image" style="width: 1000px; height: auto;">					
 					</div>
 					
 				<!--Project 3: END-->
