--- a/index.html
+++ b/index.html
@@ -410,12 +410,39 @@
 				
 				<!--Project 1: START-->
 				<div class="item">
-					<div class="project-title">Feature Extraction and Classification of Brain Signal for Brain-Computer Interface Application</div>
-					<div><code class="id_tags">Brain-Computer Interface</code> <code class="id_tags">Feature Extraction</code> <code class="id_tags">Machine Learning</code> <code class="id_tags">Python</code> <code class="id_tags">MATLAB</code></div>
-					<div class="project-description">  Eye tracking is used to track the eye movements of human to understand the cognition of the human as per eye-mind hypothesis</div>
+					<div class="project-title">Feature Extraction and Classification of Brain Signals for Brain-Computer Interface Applications</div>
+					<div>
+						<code class="id_tags">Brain-Computer Interface</code> 
+						<code class="id_tags">Feature Extraction</code> 
+						<code class="id_tags">Machine Learning</code> 
+						<code class="id_tags">Python</code> 
+						<code class="id_tags">MATLAB</code>
+					</div>
 					<div class="image-container">
 						<img src="images/b-tech_pic.jpg" alt="Project Image" class="project-image">					
 					</div>
+					<div class="project-description">
+						<b>Objective:</b> The project aimed to decode wrist movements using Magnetoencephalography (MEG) signals for Brain-Computer Interface (BCI) applications. The goal was to enable assistive technologies for individuals with neuromuscular disorders, improving their ability to interact with external devices.
+						<br><br>
+						<b>Methodology:</b> 
+						<ul>
+							<li><b>Data Source:</b> MEG signals were obtained from Dataset 3 of BCI Competition IV.</li>
+							<li><b>Signal Processing:</b> The MEG data was preprocessed to remove noise and artifacts. Multi-resolution statistical features were extracted using Wavelet Packet Transform (WPT) and Discrete Wavelet Transform (DWT).</li>
+							<li><b>Feature Selection:</b> Principal Component Analysis (PCA) was applied to rank and select the most relevant features for classification.</li>
+							<li><b>Classification:</b> Two classifiers were employed:
+								<ul>
+									<li><b>Mahalanobis Distance-Based Classifier:</b> Achieved 72.28% accuracy for two-class wrist movement classification.</li>
+									<li><b>Support Vector Machine (SVM):</b> Achieved 33% accuracy for four-class classification.</li>
+								</ul>
+							</li>
+						</ul>
+						<b>Results:</b> The Mahalanobis classifier demonstrated superior performance in two-class classification, while the SVM-based approach highlighted the challenges of multi-class classification in MEG signals. This work provides valuable insights into the development of BCIs for restoring neural communication in individuals with conditions such as ALS and cerebral palsy.
+						<br><br>
+						<b>Conclusion:</b> This project highlights the potential of using MEG signals and advanced classification techniques to improve BCI systems, contributing to assistive technology development for individuals with severe motor impairments.
+					</div>
+				</div>
+
+					
 				<!--Project 1: END-->
 
 				<!--Project 2: START-->
