--- a/index.html
+++ b/index.html
@@ -418,6 +418,9 @@
 						<code class="id_tags">Python</code> 
 						<code class="id_tags">MATLAB</code>
 					</div>
+					<div class="project-description">
+						This project focused on analyzing and classifying brain signals recorded using Magnetoencephalography (MEG) to decode wrist movements for Brain-Computer Interface (BCI) applications. Using data from Dataset 3 of BCI Competition IV, we preprocessed MEG signals, extracted multi-resolution statistical features through Wavelet Packet Transform (WPT) and Discrete Wavelet Transform (DWT), and selected top-performing features using Principal Component Analysis (PCA). Classification was performed using Mahalanobis distance-based and Support Vector Machine (SVM) classifiers, achieving accuracies of 72.28% for two-class and 33% for four-class wrist movement classification. The study highlights the potential of BCI systems to assist individuals with neuromuscular disorders by restoring neural communication.
+					</div>
 					<div class="image-container">
 						<img src="images/b-tech_pic.jpg" alt="Project Image" class="project-image">					
 					</div>
@@ -426,13 +429,13 @@
 						<br><br>
 						<b>Methodology:</b> 
 						<ul>
-							<li><b>Data Source:</b> MEG signals were obtained from Dataset 3 of BCI Competition IV.</li>
+							<li><b>Data Source:</b> MEG signals were sourced from Dataset 3 of the BCI Competition IV, recorded during wrist movements in four directions: right, left, back, and forth.</li>
 							<li><b>Signal Processing:</b> The MEG data was preprocessed to remove noise and artifacts. Multi-resolution statistical features were extracted using Wavelet Packet Transform (WPT) and Discrete Wavelet Transform (DWT).</li>
 							<li><b>Feature Selection:</b> Principal Component Analysis (PCA) was applied to rank and select the most relevant features for classification.</li>
-							<li><b>Classification:</b> Two classifiers were employed:
+							<li><b>Classification:</b> Mahalanobis Distance-Based classifier was employed:
 								<ul>
-									<li><b>Mahalanobis Distance-Based Classifier:</b> Achieved 72.28% accuracy for two-class wrist movement classification.</li>
-									<li><b>Support Vector Machine (SVM):</b> Achieved 33% accuracy for four-class classification.</li>
+									<li><b> For two-class wrist movement classification:</b> Achieved 72.28% accuracy.</li>
+									<li><b>For four-class wrist movement classification:</b> Achieved 33% accuracy for four-class classification.</li>
 								</ul>
 							</li>
 						</ul>
