--- a/index.html
+++ b/index.html
@@ -432,12 +432,11 @@
 							<li><b>Data Source:</b> MEG signals were sourced from Dataset 3 of the BCI Competition IV, recorded during wrist movements in four directions: right, left, back, and forth.</li>
 							<li><b>Signal Processing:</b> The MEG data was preprocessed to remove noise and artifacts. Multi-resolution statistical features like energy, IQR, COVFF, and NCV were extracted using Wavelet Packet Transform (WPT) and Discrete Wavelet Transform (DWT).</li>
 							<li><b>Feature Selection:</b> Principal Component Analysis (PCA) was applied to rank and select the most relevant features for classification.</li>
-							<li><b>Classification:</b> The Mahalanobis Distance-Based Classifier was utilized for classifying the data. This classifier works by measuring the distance between a given data point and the mean of a particular class, considering the spread and correlation of the data within each class. Unlike the Euclidean distance, which treats all dimensions equally, the Mahalanobis distance takes into account the covariance of the data, making it more effective for cases where the features are correlated or have different scales. This makes it particularly useful for multi-dimensional data, where the relationship between features is important for accurate classification. In this study, the Mahalanobis distance classifier was used to classify wrist movements based on features extracted from MEG signals.</li>
-						</ul>
+							<li><b>Classification:</b> The Mahalanobis Distance-Based Classifier was utilized for classifying the data. This classifier works by measuring the distance between a given data point and the mean of a particular class, considering the spread and correlation of the data within each class. Unlike the Euclidean distance, which treats all dimensions equally, the Mahalanobis distance takes into account the covariance of the data, making it more effective for cases where the features are correlated or have different scales. This makes it particularly useful for multi-dimensional data, where the relationship between features is important for accurate classification. </li>
 						<b>Results:</b> The Mahalanobis distance-based classifier achieved promising results: 
 						<ul>
 							<li><b>For two-class wrist movement classification:</b> Achieved 72.28% accuracy.</li>
-							<li><b>For four-class wrist movement classification:</b> Achieved 33% accuracy for four-class classification.</li>
+							<li><b>For four-class wrist movement classification:</b> Achieved 33% accuracy.</li>
 						</ul>
 						This work provides valuable insights into the development of BCIs for restoring neural communication in individuals with conditions such as ALS and cerebral palsy.
 						<br><br>
