--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
 					<div><code class="id_tags">Human Cognition</code> <code class="id_tags">Photogrammetry</code> <code class="id_tags">Ray Casting</code> <code class="id_tags">Python</code> <code class="id_tags">MATLAB</code></div>
 					
 					<div class="project-description">  Eye tracking is a technology used to monitor and analyze where and how a person moves their eyes. It helps researchers understand what a person is focusing on and thinking about, based on the eye-mind hypothesis, which suggests a connection between eye movements and cognitive processes like attention, perception, and decision-making.</div>
-					<div class="project-description">  We propose a novel methodology to analyze operators' cognitive behavior in collaborative control rooms by visualizing their gaze patterns and obtaining eye-tracking metrics. Traditional eye trackers are designed to capture gaze data on calibrated displays within a limited range. However, they are often inadequate for capturing gaze data on large overview displays, mainly due to the size of these screens and the limitations of single-eye tracking systems. To address this limitation, our approach extends gaze tracking to large overview displays by leveraging the gaze vector, a standard output of eye-tracking systems</div>
+					<div class="project-description">  We propose a novel methodology to analyze operators' cognitive behavior in collaborative control rooms by visualizing their gaze patterns and obtaining eye-tracking metrics. Traditional eye trackers are designed to capture gaze data on calibrated displays within a limited range. However, they are often inadequate for capturing gaze data on large screen displays, mainly due to the size of these screens and the limitations of single-eye tracking systems. To address this limitation, our approach extends gaze tracking to any object in the real environment by leveraging the gaze vector, a standard output of eye-tracking systems</div>
 					<div class="project-description">  This work constitutes a significant portion of my MS thesis at IIT Madras. However, detailed discussions are not possible at this stage as it is currently undergoing the patent filing process.</div>
 				</div>
 			       <!--Project 2: END-->
@@ -497,7 +497,6 @@
 						<ul>
 							<li>Used the UNet architecture for semantic segmentation of colonoscopy images.</li>
 							<li>Trained the model on a dataset organized with separate training and validation splits for images and masks.</li>
-							<li>Performed inference using pre-trained weights to predict the presence of polyps.</li>
 							<li>Evaluated the model using accuracy, precision, recall, and F1-score metrics.</li>
 						</ul>
 						<b>Key Features:</b> 
