--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
 						<a href="mailto:itsaltafhaider@gmail.com" style="text-decoration: none; color: #0078d4; font-weight: bold;">Email me</a>
 					</div>
 					<div style="border: 2px solid #0078d4; border-radius: 6px; padding: 6px; background-color: #f4f4f4; text-align: center;">
-						<a href="https://github.com/githuburl" target="_blank" style="text-decoration: none; color: #0078d4; font-weight: bold;">GitHub</a>
+						<a href="https://github.com/HaiderAltaf" target="_blank" style="text-decoration: none; color: #0078d4; font-weight: bold;">GitHub</a>
 					</div>
 					<div style="border: 2px solid #0078d4; border-radius: 6px; padding: 6px; background-color: #f4f4f4; text-align: center;">
 						<a href="https://www.linkedin.com/in/haider-altaf-72b86910a" target="_blank" style="text-decoration: none; color: #0078d4; font-weight: bold;">LinkedIn</a>
